<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.3.1</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>us.anant.stac</groupId>
	<artifactId>stacapi</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>stacapi</name>
	<description>STAC API</description>
	<url/>
	<licenses>
		<license/>
	</licenses>
	<developers>
		<developer/>
	</developers>
	<scm>
		<connection/>
		<developerConnection/>
		<tag/>
		<url/>
	</scm>
	<properties>
		<java.version>17</java.version>
	</properties>
	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-cassandra</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-devtools</artifactId>
			<scope>runtime</scope>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
      		<groupId>org.locationtech.jts</groupId>
      		<artifactId>jts-core</artifactId>
      		<version>1.19.0</version>
    	</dependency>
		<dependency>
			<groupId>org.locationtech.jts.io</groupId>
			<artifactId>jts-io-common</artifactId>
			<version>1.19.0</version>
		</dependency>
		<dependency>
    		<groupId>org.springdoc</groupId>
    		<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
    		<version>2.5.0</version>
		</dependency>
		<dependency> 
			<groupId>org.springframework.boot</groupId> 
			<artifactId>spring-boot-starter-validation</artifactId> 
		</dependency>
		 <dependency>
      		<groupId>com.uber</groupId>
      		<artifactId>h3</artifactId>
      		<version>4.1.1</version>
    	</dependency>
    	
    	<dependency>
    		<groupId>com.datastax.oss</groupId>
    		<artifactId>java-driver-core</artifactId>
    		<version>4.17.0</version>
		</dependency>
		
		<dependency>
      		<groupId>org.jetbrains</groupId>
      		<artifactId>annotations</artifactId>
      		<version>17.0.0</version>
      		<scope>compile</scope>
    	</dependency>
    	
    	<dependency>
      		<groupId>org.slf4j</groupId>
      		<artifactId>slf4j-simple</artifactId>
    	</dependency>

		<!--<dependency>
    		<groupId>org.wololo</groupId>
    		<artifactId>jts2geojson</artifactId>
    		<version>0.18.1</version>
		</dependency>-->
		
		<dependency>
      		<groupId>org.n52.jackson</groupId>
      		<artifactId>jackson-datatype-jts</artifactId>
      		<version>1.2.10</version>
    	</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.datatype</groupId>
			<artifactId>jackson-datatype-jsr310</artifactId>
			<version>2.13.0</version>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<excludes>
						<exclude>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
						</exclude>
					</excludes>
				</configuration>
			</plugin>
		</plugins>
	</build>

</project>
